<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="bottom|start"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/add_recipe" />

    <FrameLayout
        android:id="@+id/option_write_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BottomSheetWrapper">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/BottomSheetOption"
            android:drawableStart="@drawable/ic_pencil"
            android:text="@string/write_recipe" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/option_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BottomSheetWrapper">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/BottomSheetOption"
            android:drawableStart="@drawable/ic_camera"
            android:text="@string/take_photo" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/option_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BottomSheetWrapper">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/BottomSheetOption"
            android:drawableStart="@drawable/ic_camera"
            android:text="@string/choose_photo" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/option_add_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BottomSheetWrapper">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/BottomSheetOption"
            android:drawableStart="@drawable/ic_add_link"
            android:text="@string/add_link" />

    </FrameLayout>

</LinearLayout>