<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:visibility="invisible"
    android:layout_width="wrap_content"
    android:layout_height="224dp">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:id="@+id/menu_option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/menu_option_1_text"
            android:textSize="16sp"
            android:gravity="end"
            android:text="@string/add_recipe" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_pencil"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:id="@+id/menu_option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/menu_option_2_text"
            android:textSize="16sp"
            android:gravity="end"
            android:text="@string/capture_image" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_camera"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:id="@+id/menu_option_3"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/menu_option_3_text"
            android:textSize="16sp"
            android:gravity="end"
            android:text="@string/add_link" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_add_link"
            app:fabSize="mini" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </FrameLayout>

</LinearLayout>